--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
