--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "jquery": "^3.6.0",
+    "ng2-search-filter": "^0.5.1",
     "ngx-toastr": "^14.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
