--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ng-select/ng-select": "^7.4.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "jquery": "^3.6.0",
